--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,27 @@
 
+@Article{	  hartmann2024strength,
+  author	= {Hartmann, Frederik and Walkden, George},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  publisher	= {Open Library of Humanities},
+  title		= {The Strength of the Phylogenetic Signal in Syntactic
+		  Data},
+  volume	= {9},
+  year		= {2024},
+  doi		= {10.16995/glossa.10598}
+}
+
+@Article{	  williams1987implicit,
+  author	= {Williams, Edwin},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {2},
+  pages		= {151--180},
+  title		= {Implicit Arguments, the Binding Theory, and Control},
+  volume	= {5},
+  year		= {1987},
+  doi		= {10.1007/BF00166581}
+}
+
 @InProceedings{	  bylinina2014landscape,
   address	= {T{\"u}bingen},
   author	= {Bylinina, Lisa and McCready, E. and Yasutada, Sudo},
