--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,26 @@
 
+@Article{	  mccready2007adjectives,
+  author	= {McCready, Elin and Ogata, Norry},
+  journal	= {Natural Language Semantics},
+  number	= {1},
+  pages		= {35--63},
+  title		= {Adjectives, Stereotypicality, and Comparison},
+  volume	= {15},
+  year		= {2007},
+  doi		= {10.1007/s11050-007-9009-8}
+}
+
+@Article{	  nishiyama1999adjectives,
+  author	= {Nishiyama, Kunio},
+  journal	= {Journal of East Asian Linguistics},
+  number	= {3},
+  pages		= {183--222},
+  title		= {Adjectives and the {{Copulas}} in {{Japanese}}},
+  volume	= {8},
+  year		= {1999},
+  doi		= {10.1023/A:1008395915524}
+}
+
 @Article{	  hartmann2024strength,
   author	= {Hartmann, Frederik and Walkden, George},
   journal	= {Glossa: a journal of general linguistics},
