--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,37 @@
 
+@Article{	  weicker2024children,
+  author	= {Weicker, Merle and Schulz, Petra},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Children and adults privilege linguistic over visual
+		  information when creating comparison classes for prenominal
+		  gradable adjectives},
+  volume	= {9},
+  year		= {2024}
+}
+
+@InCollection{	  alrenga2010comparisons,
+  author	= {Alrenga, Peter},
+  booktitle	= {Adjectives: {{Formal}} Analyses in Syntax and Semantics},
+  editor	= {Cabredo Hofherr, Patricia and Matushansky, Ora},
+  pages		= {155--186},
+  publisher	= {John Benjamins Publishing Company},
+  series	= {Linguistik {{Aktuell}}/{{Linguistics Today}}},
+  title		= {Comparisons of Similarity and Difference},
+  year		= {2010},
+  doi		= {10.1075/la.153.05alr}
+}
+
+@Book{		  cabredohofherr2010adjectives,
+  address	= {Amsterdam; Philadelphia},
+  editor	= {Cabredo Hofherr, Patricia and Matushansky, Ora},
+  number	= {v. 153},
+  publisher	= {John Benjamins Pub},
+  series	= {Linguistik Aktuell/{{Linguistics}} Today},
+  title		= {Adjectives: Formal Analyses in Syntax and Semantics},
+  year		= {2010}
+}
+
 @Article{	  mccready2007adjectives,
   author	= {McCready, Elin and Ogata, Norry},
   journal	= {Natural Language Semantics},
