--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Article{	  safir2024just,
+  author	= {Safir, Ken},
+  journal	= {Syntax},
+  title		= {Just Pair-Merge},
+  year		= {2024},
+  doi		= {10.1111/synt.12284}
+}
+
 @Article{	  weicker2024children,
   author	= {Weicker, Merle and Schulz, Petra},
   journal	= {Glossa: a journal of general linguistics},
