--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  kennedy2007vaguenessa,
+  author	= {Kennedy, Christopher},
+  journal	= {Linguistics and Philosophy},
+  number	= {1},
+  pages		= {1--45},
+  title		= {Vagueness and Grammar: The Semantics of Relative and
+		  Absolute Gradable Adjectives},
+  volume	= {30},
+  year		= {2007}
+}
+
 @Article{	  safir2024just,
   author	= {Safir, Ken},
   journal	= {Syntax},
