--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,58 @@
 
+@Article{	  bolhuis2024three,
+  author	= {Bolhuis, Johan J. and Crain, Stephen and Fong, Sandiway
+		  and Moro, Andrea},
+  journal	= {Nature},
+  number	= {8004},
+  pages		= {489--489},
+  publisher	= {Nature Publishing Group},
+  title		= {Three Reasons Why {{AI}} Doesn't Model Human Language},
+  volume	= {627},
+  year		= {2024},
+  doi		= {10.1038/d41586-024-00824-z}
+}
+
+@Article{	  vanluven2024obligatoriness,
+  author	= {Van Luven, Katie and Toivonen, Ida},
+  journal	= {Language and Linguistics Compass},
+  number	= {3},
+  pages		= {e12511},
+  title		= {The Obligatoriness of Arguments},
+  volume	= {18},
+  year		= {2024}
+}
+
+@Article{	  bar-lev2023communicative,
+  author	= {Bar-Lev, Moshe E. and Katzir, Roni},
+  journal	= {Linguistic Inquiry},
+  pages		= {1--23},
+  title		= {Communicative Stability and the Typology of Logical
+		  Operators},
+  year		= {2023}
+}
+
+@Article{	  brunetti2021informationstructural,
+  author	= {Brunetti, Lisa and De Kuthy, Kordula and Riester, Arndt},
+  journal	= {Discours. Revue de linguistique, psycholinguistique et
+		  informatique. A journal of linguistics, psycholinguistics
+		  and computational linguistics},
+  number	= {28},
+  title		= {The Information-Structural Status of Adjuncts: A
+		  Question-under-Discussion-Based Approach},
+  year		= {2021}
+}
+
+@Article{	  haegeman2017unspeakable,
+  author	= {Haegeman, Liliane},
+  journal	= {Linguistic Variation},
+  number	= {2},
+  pages		= {229--250},
+  title		= {Unspeakable Sentences: Subject Omission in Written
+		  Registers: A Cartographic Analysis},
+  volume	= {17},
+  year		= {2017}
+}
+
 @Article{	  kennedy2007vaguenessa,
   author	= {Kennedy, Christopher},
   journal	= {Linguistics and Philosophy},
