--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,44 @@
 
+@Article{	  dinges2024absolute,
+  author	= {Dinges, Alexander},
+  journal	= {Linguistics and Philosophy},
+  number	= {2},
+  pages		= {341--360},
+  title		= {Absolute Gradable Adjectives and Loose Talk},
+  volume	= {47},
+  year		= {2024}
+}
+
+@Article{	  rabern2021binding,
+  author	= {Rabern, Brian},
+  journal	= {Inquiry},
+  number	= {5-6},
+  pages		= {533--563},
+  title		= {Binding Bound Variables in Epistemic Contexts},
+  volume	= {64},
+  year		= {2021}
+}
+
+@Article{	  ninan2018quantification,
+  author	= {Ninan, Dilip},
+  journal	= {The Philosophical Review},
+  number	= {4},
+  pages		= {433--485},
+  title		= {Quantification and Epistemic Modality},
+  volume	= {127},
+  year		= {2018}
+}
+
+@Article{	  hoek2018conversational,
+  author	= {Hoek, Daniel},
+  journal	= {The Philosophical Review},
+  number	= {2},
+  pages		= {151--196},
+  title		= {Conversational Exculpature},
+  volume	= {127},
+  year		= {2018}
+}
+
 @Article{	  bolhuis2024three,
   author	= {Bolhuis, Johan J. and Crain, Stephen and Fong, Sandiway
 		  and Moro, Andrea},
