--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,16 @@
 
+@Article{	  bogomolets2024movement,
+  author	= {Bogomolets, Ksenia and Fenger, Paula and Stegovec,
+		  Adrian},
+  journal	= {Syntax},
+  number	= {n/a},
+  title		= {Movement in Disguise: {{Morphology}} as a Diagnostic for
+		  Verb Movement in {{Algonquian}}},
+  volume	= {n/a},
+  year		= {2024},
+  doi		= {10.1111/synt.12281}
+}
+
 @Article{	  dinges2024absolute,
   author	= {Dinges, Alexander},
   journal	= {Linguistics and Philosophy},
