--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,17 @@
 
+@Unpublished{	  lasersohn2024coordination,
+  author	= {Lasersohn, Peter},
+  title		= {Coordination of Unmatched Clause Types and Dynamic
+		  Look-Ahead},
+  year		= {2024}
+}
+
+@Unpublished{	  krifka2024framework,
+  author	= {Krifka, Manfred},
+  title		= {A Framework for Performative and Assertive Updates},
+  year		= {2024}
+}
+
 @Article{	  bogomolets2024movement,
   author	= {Bogomolets, Ksenia and Fenger, Paula and Stegovec,
 		  Adrian},
