--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,17 @@
 
+@Article{	  alonso-ovalle2024eventive,
+  author	= {{Alonso-Ovalle}, Luis and {Men{\'e}ndez-Benito}, Paula and
+		  Rubinstein, Aynat},
+  journal	= {Natural Language Semantics},
+  number	= {2},
+  pages		= {135--176},
+  title		= {Eventive Modal Projection: The Case of {{Spanish}}
+		  Subjunctive Relative Clauses},
+  volume	= {32},
+  year		= {2024},
+  doi		= {10.1007/s11050-023-09218-9}
+}
+
 @Unpublished{	  lasersohn2024coordination,
   author	= {Lasersohn, Peter},
   title		= {Coordination of Unmatched Clause Types and Dynamic
