--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,47 @@
 
+@Article{	  fitz2024neurobiological,
+  author	= {Fitz, Hartmut and Hagoort, Peter and Petersson, Karl
+		  Magnus},
+  journal	= {Neurobiology of Language},
+  pages		= {1--23},
+  title		= {Neurobiological {{Causal Models}} of {{Language
+		  Processing}}},
+  year		= {2024},
+  doi		= {10.1162/nol_a_00133}
+}
+
+@Book{		  kayne2005movement,
+  author	= {Kayne, Richard S.},
+  publisher	= {Oxford University Press},
+  title		= {Movement and {{Silence}}},
+  year		= {2005}
+}
+
+@Book{		  kayne2019questions,
+  author	= {Kayne, Richard S.},
+  publisher	= {Oxford University Press},
+  title		= {Questions of {{Syntax}}},
+  year		= {2019}
+}
+
+@Misc{		  misra2024language,
+  author	= {Misra, Kanishka and Mahowald, Kyle},
+  number	= {arXiv:2403.19827},
+  publisher	= {arXiv},
+  title		= {Language {{Models Learn Rare Phenomena}} from {{Less Rare
+		  Phenomena}}: {{The Case}} of the {{Missing AANNs}}},
+  year		= {2024},
+  doi		= {10.48550/arXiv.2403.19827}
+}
+
+@InProceedings{	  solt2007two,
+  address	= {Lille},
+  author	= {Solt, Stephanie},
+  booktitle	= {Interantional {{Conference}} on {{Adjectives}}},
+  title		= {Two {{Types}} of {{Modified Cardinals}}},
+  year		= {2007}
+}
+
 @Article{	  alonso-ovalle2024eventive,
   author	= {{Alonso-Ovalle}, Luis and {Men{\'e}ndez-Benito}, Paula and
 		  Rubinstein, Aynat},
