--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,95 @@
 
+@Article{	  branan2024aprobing,
+  author	= {Branan, Kenyon and Erlewine, Michael Yoshitaka},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {375--401},
+  title		= {{\=A}-{{Probing}} for the {{Closest DP}}},
+  volume	= {55},
+  year		= {2024},
+  doi		= {10.1162/ling_a_00459}
+}
+
+@Article{	  brown2024adjective,
+  author	= {Brown, Jason},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {423--435},
+  title		= {Adjective {{Order}} and {{Adnominal Modification}} in
+		  {{Naasioi}}},
+  volume	= {55},
+  year		= {2024},
+  doi		= {10.1162/ling_a_00464}
+}
+
+@Article{	  fortuny2024deducing,
+  author	= {Fortuny, Jordi},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {219--253},
+  title		= {Deducing the {{Coordinand Constraint}}},
+  volume	= {55},
+  year		= {2024},
+  doi		= {10.1162/ling_a_00468}
+}
+
+@Article{	  jovovic2024condition,
+  author	= {Jovovi{\'c}, Ivana},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {402--421},
+  title		= {Condition {{B}} and {{Other Conditions}} on {{Pronominal
+		  Licensing}} in {{Serbo-Croatian}}},
+  volume	= {55},
+  year		= {2024},
+  doi		= {10.1162/ling_a_00475}
+}
+
+@Article{	  lahrouchi2024nasal,
+  author	= {Lahrouchi, Mohamed and Ulfsbjorninn, Shanti},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {255--286},
+  title		= {Nasal {{Assimilation Counterfeeding}} and {{Allomorphy}}
+		  in {{Haitian}}: {{Nothing Is Still Something}}!},
+  volume	= {55},
+  year		= {2024},
+  doi		= {10.1162/ling_a_00469}
+}
+
+@Article{	  poole2024ima,
+  author	= {Poole, Ethan},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {287--326},
+  title		= {({{Im}})Possible {{Traces}}},
+  volume	= {55},
+  year		= {2024},
+  doi		= {10.1162/ling_a_00467}
+}
+
+@Article{	  sakamoto2024negraising,
+  author	= {Sakamoto, Yuta},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {436--444},
+  title		= {Neg-{{Raising}} via {{Proform}}},
+  volume	= {55},
+  year		= {2024},
+  doi		= {10.1162/ling_a_00474}
+}
+
+@Article{	  vanurk2024constraining,
+  author	= {{\noopsort{urk}}{van Urk}, Coppe},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {327--373},
+  title		= {Constraining {{Predicate Fronting}}},
+  volume	= {55},
+  year		= {2024},
+  doi		= {10.1162/ling_a_00466}
+}
+
 @Article{	  fitz2024neurobiological,
   author	= {Fitz, Hartmut and Hagoort, Peter and Petersson, Karl
 		  Magnus},
