--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,58 @@
 
+@InCollection{	  newell2019bracketing,
+  author	= {Newell, Heather},
+  booktitle	= {Oxford {{Research Encyclopedia}} of {{Linguistics}}},
+  editor	= {Aronoff, Mark},
+  publisher	= {{Oxford University Press}},
+  title		= {Bracketing {{Paradoxes}} in {{Morphology}}},
+  year		= {2019},
+  doi		= {10.1093/acrefore/9780199384655.013.589}
+}
+
+@Book{		  bliss2024grounding,
+  author	= {Bliss, Ricki},
+  publisher	= {Cambridge University Press},
+  title		= {Grounding, Fundamentality and Ultimate Explanations},
+  year		= {2024}
+}
+
+@Book{		  asay2023truthmaking,
+  author	= {Asay, Jamin},
+  publisher	= {Cambridge University Press},
+  title		= {Truthmaking},
+  year		= {2023}
+}
+
+@Book{		  burgess2022set,
+  author	= {Burgess, John P.},
+  publisher	= {Cambridge University Press},
+  title		= {Set Theory},
+  year		= {2022}
+}
+
+@Book{		  maurin2022properties,
+  author	= {Maurin, Anna-Sofia},
+  publisher	= {Cambridge University Press},
+  title		= {Properties},
+  year		= {2022}
+}
+
+@Book{		  miller2022metaphysical,
+  author	= {Miller, J. T. M.},
+  publisher	= {Cambridge University Press},
+  title		= {Metaphysical Realism and Anti-Realism},
+  year		= {2022}
+}
+
+@Article{	  fabregas2024deconstructing,
+  author	= {F{\'a}bregas, Antonio},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Deconstructing Spanish Prefixation},
+  volume	= {9},
+  year		= {2024}
+}
+
 @Article{	  branan2024aprobing,
   author	= {Branan, Kenyon and Erlewine, Michael Yoshitaka},
   journal	= {Linguistic Inquiry},
