--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Article{	  smith2024mental,
+  author	= {Smith, Ryan Walter},
+  journal	= {Natural Language Semantics},
+  title		= {Mental States via Possessive Predication: The Grammar of
+		  Possessive Experiencer Complex Predicates in {{Persian}}},
+  year		= {2024},
+  doi		= {10.1007/s11050-024-09221-8}
+}
+
 @InCollection{	  newell2019bracketing,
   author	= {Newell, Heather},
   booktitle	= {Oxford {{Research Encyclopedia}} of {{Linguistics}}},
