--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  dupre2024acquiring,
+  author	= {Dupre, Gabe},
+  journal	= {Cognition},
+  pages		= {105771},
+  title		= {Acquiring a Language vs. Inducing a Grammar},
+  volume	= {247},
+  year		= {2024},
+  doi		= {10.1016/j.cognition.2024.105771}
+}
+
 @Article{	  smith2024mental,
   author	= {Smith, Ryan Walter},
   journal	= {Natural Language Semantics},
