--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,27 @@
 
+@Article{	  guest2023logical,
+  author	= {Guest, Olivia and Martin, Andrea E.},
+  journal	= {Computational Brain \& Behavior},
+  number	= {2},
+  pages		= {213--227},
+  title		= {On {{Logical Inference}} over {{Brains}}, {{Behaviour}},
+		  and {{Artificial Neural Networks}}},
+  volume	= {6},
+  year		= {2023},
+  doi		= {10.1007/s42113-022-00166-x}
+}
+
+@Misc{		  rooij2023reclaiming,
+  author	= {{\noopsort{rooij}}van Rooij, Iris and Guest, Olivia and
+		  Adolfi, Federico G. and {\noopsort{haan}}de Haan, Ronald
+		  and Kolokolova, Antonina and Rich, Patricia},
+  publisher	= {OSF},
+  title		= {Reclaiming {{AI}} as a Theoretical Tool for Cognitive
+		  Science},
+  year		= {2023},
+  doi		= {10.31234/osf.io/4cbuv}
+}
+
 @Article{	  dupre2024acquiring,
   author	= {Dupre, Gabe},
   journal	= {Cognition},
