--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,46 @@
 
+@Book{		  hvitfeldt2021supervised,
+  address	= {Boca Raton},
+  author	= {Hvitfeldt, Emil and Silge, Julia},
+  edition	= {1},
+  publisher	= {{Chapman and Hall/CRC}},
+  title		= {Supervised {{Machine Learning}} for {{Text Analysis}} in
+		  {{R}}},
+  year		= {2021},
+  doi		= {10.1201/9781003093459}
+}
+
+@Article{	  lan2024large,
+  author	= {Lan, Nur and Chemla, Emmanuel and Katzir, Roni},
+  journal	= {Linguistic Inquiry},
+  pages		= {1--56},
+  title		= {Large {{Language Models}} and the {{Argument}} from the
+		  {{Poverty}} of the {{Stimulus}}},
+  year		= {2024},
+  doi		= {10.1162/ling_a_00533}
+}
+
+@Article{	  srinivas2022does,
+  author	= {Srinivas, Sadhwi and Legendre, Geraldine},
+  journal	= {Linguistic Inquiry},
+  pages		= {1--27},
+  title		= {Does {{D Select}} the {{CP}} in {{Light Verb
+		  Constructions}}? {{A Reply}} to {{Hankamer}} and
+		  {{Mikkelsen}} 2021},
+  year		= {2022},
+  doi		= {10.1162/ling_a_00477}
+}
+
+@Article{	  landau2024noncanonical,
+  author	= {Landau, Idan},
+  journal	= {Language and Linguistics Compass},
+  number	= {3},
+  title		= {Noncanonical {{Obligatory Control}}},
+  volume	= {18},
+  year		= {2024},
+  doi		= {10.1111/lnc3.12515}
+}
+
 @Article{	  guest2023logical,
   author	= {Guest, Olivia and Martin, Andrea E.},
   journal	= {Computational Brain \& Behavior},
