--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,58 @@
 
+@Article{	  knowlton2021linguistica,
+  author	= {Knowlton, Tyler and Hunter, Tim and Odic, Darko and
+		  Wellwood, Alexis and Halberda, Justin and Pietroski, Paul
+		  and Lidz, Jeffrey},
+  journal	= {Annals of the New York Academy of Sciences},
+  number	= {1},
+  pages		= {134--144},
+  title		= {Linguistic Meanings as Cognitive Instructions},
+  volume	= {1500},
+  year		= {2021},
+  doi		= {10.1111/nyas.14618}
+}
+
+@Article{	  wellwood2020interpreting,
+  author	= {Wellwood, Alexis},
+  journal	= {Frontiers in Psychology},
+  publisher	= {Frontiers},
+  title		= {Interpreting {{Degree Semantics}}},
+  volume	= {10},
+  year		= {2020},
+  doi		= {10.3389/fpsyg.2019.02972}
+}
+
+@Article{	  wellwood2023linguistic,
+  author	= {Wellwood, Alexis and Hunter, Tim},
+  journal	= {Behavioral and Brain Sciences},
+  pages		= {e289},
+  title		= {Linguistic Meanings in Mind},
+  volume	= {46},
+  year		= {2023},
+  doi		= {10.1017/S0140525X23001887}
+}
+
+@Book{		  cooper2023perception,
+  author	= {Cooper, Robin},
+  edition	= {1},
+  publisher	= {Oxford University PressOxford},
+  title		= {From {{Perception}} to {{Communication}}: {{A Theory}} of
+		  {{Types}} for {{Action}} and {{Meaning}}},
+  year		= {2023},
+  doi		= {10.1093/oso/9780192871312.001.0001}
+}
+
+@Book{		  wellwood2019meaning,
+  address	= {Oxford, United Kingdom},
+  author	= {Wellwood, Alexis},
+  edition	= {First edition},
+  number	= {12},
+  publisher	= {Oxford University Press},
+  series	= {Oxford Linguistics},
+  title		= {The Meaning of More},
+  year		= {2019}
+}
+
 @Book{		  hvitfeldt2021supervised,
   address	= {Boca Raton},
   author	= {Hvitfeldt, Emil and Silge, Julia},
