--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Book{		  koev2022parenthetical,
+  author	= {Koev, Todor},
+  edition	= {1},
+  publisher	= {Oxford University PressOxford},
+  title		= {Parenthetical {{Meaning}}},
+  year		= {2022},
+  doi		= {10.1093/oso/9780198869535.001.0001}
+}
+
 @Article{	  knowlton2021linguistica,
   author	= {Knowlton, Tyler and Hunter, Tim and Odic, Darko and
 		  Wellwood, Alexis and Halberda, Justin and Pietroski, Paul
