--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,31 @@
 
+@Book{		  elliott2024measurement,
+  author	= {Elliott, Edward J. R.},
+  title		= {The Measurement of Subjective Probability},
+  year		= {2024}
+}
+
+@Article{	  ross2020multiple,
+  author	= {Ross, Lauren N.},
+  journal	= {Philosophy of Science},
+  number	= {4},
+  pages		= {640--662},
+  title		= {Multiple Realizability from a Causal Perspective},
+  volume	= {87},
+  year		= {2020}
+}
+
+@InBook{	  egan2018functiontheoretic,
+  author	= {Egan, Frances},
+  booktitle	= {1},
+  editor	= {Kaplan, David},
+  publisher	= {Oxford University Press},
+  title		= {Function-Theoretic Explanation and the Search for Neural
+		  Mechanisms Explanation and Integration in Mind and Brain
+		  Science},
+  year		= {2018}
+}
+
 @Book{		  koev2022parenthetical,
   author	= {Koev, Todor},
   edition	= {1},
