--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,59 @@
 
+@Book{		  murphy2024what,
+  author	= {Murphy, Elliot},
+  publisher	= {arXiv},
+  title		= {What Is a Word?},
+  volume	= {(arXiv:2402.12605)},
+  year		= {2024}
+}
+
+@Article{	  krauska2023moving,
+  author	= {Krauska, Alexandra and Lau, Ellen},
+  journal	= {Frontiers in Language Sciences},
+  title		= {Moving Away from Lexicalism in Psycho- and
+		  Neuro-Linguistics},
+  volume	= {2},
+  year		= {2023}
+}
+
+@Article{	  ormazabal2013differential,
+  author	= {Ormazabal, Javier and Romero, Juan},
+  journal	= {Borealis -- An International Journal of Hispanic
+		  Linguistics},
+  number	= {2},
+  pages		= {221--239},
+  title		= {Differential Object Marking, Case and Agreement},
+  volume	= {2},
+  year		= {2013}
+}
+
+@Article{	  ormazabal2019prolegomena,
+  author	= {Ormazabal, Javier and Romero, Juan},
+  journal	= {Lingvistic{\ae} Investigationes},
+  number	= {1},
+  pages		= {102--131},
+  title		= {Prolegomena to the Study of Object Relations},
+  volume	= {42},
+  year		= {2019}
+}
+
+@Article{	  ormazabal2022deconstructing,
+  author	= {Ormazabal, Javier and Romero, Juan},
+  journal	= {Linguistic Inquiry},
+  pages		= {1--44},
+  title		= {Deconstructing {SE}-Constructions: Number Agreement and
+		  Postsyntactic Variation},
+  year		= {2022}
+}
+
+@Book{		  richard2008when,
+  address	= {Oxford ; New York},
+  author	= {Richard, Mark},
+  publisher	= {Oxford University Press},
+  title		= {When Truth Gives Out},
+  year		= {2008}
+}
+
 @Book{		  elliott2024measurement,
   author	= {Elliott, Edward J. R.},
   title		= {The Measurement of Subjective Probability},
