--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,19 @@
 
+@InCollection{	  embick2005status,
+  author	= {Embick, David and Halle, Morris},
+  booktitle	= {Romance {{Languages}} and {{Linguistic Theory}} 2003:
+		  {{Selected}} Papers from `{{Going Romance}}' 2003,
+		  {{Nijmegen}}, 20--22 {{November}}},
+  editor	= {Geerts, Twan and van Ginneken, Ivo and Jacobs, Haike},
+  pages		= {37--62},
+  publisher	= {John Benjamins Publishing Company},
+  series	= {Current {{Issues}} in {{Linguistic Theory}}},
+  title		= {On the {{Status}} of {{Stems}} in {{Morphological
+		  Theory}}},
+  year		= {2005},
+  doi		= {10.1075/cilt.270.03emb}
+}
+
 @Book{		  murphy2024what,
   author	= {Murphy, Elliot},
   publisher	= {arXiv},
