--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,28 @@
 
+@Article{	  aremu2024prosodically,
+  author	= {Aremu, Daniel Toluwalope and Weisser, Philipp},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  publisher	= {Open Library of Humanities},
+  title		= {{Prosodically determined coordinator placement in
+		  Yor{\`u}b{\'a}}},
+  volume	= {9},
+  year		= {2024},
+  doi		= {10.16995/glossa.10899}
+}
+
+@Article{	  smith2024introducing,
+  author	= {Smith, Ryan Walter and Yu, Jianrong},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  publisher	= {Open Library of Humanities},
+  title		= {Introducing Agents by Binding Indices: {{Implications}}
+		  for Subjectless Presuppositions and Agent Entailments.},
+  volume	= {9},
+  year		= {2024},
+  doi		= {10.16995/glossa.10596}
+}
+
 @InCollection{	  embick2005status,
   author	= {Embick, David and Halle, Morris},
   booktitle	= {Romance {{Languages}} and {{Linguistic Theory}} 2003:
