--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,33 @@
 
+@Book{		  disciullo1987definition,
+  address	= {Cambridge, Mass},
+  author	= {Di Sciullo, Anne-Marie and Williams, Edwin},
+  publisher	= {MIT Press},
+  title		= {On the Definition of Word},
+  volume	= {(14)},
+  year		= {1987}
+}
+
+@Book{		  odonnell2015productivity,
+  address	= {Cambridge, Massachusetts},
+  author	= {O'Donnell, Timothy J.},
+  publisher	= {The MIT Press},
+  title		= {Productivity and Reuse in Language: A Theory of Linguistic
+		  Computation and Storage},
+  year		= {2015}
+}
+
+@InBook{	  seely2006merge,
+  author	= {Seely, Daniel},
+  booktitle	= {Minimalist Essays},
+  editor	= {Boeckx, Cedric},
+  pages		= {182-217},
+  publisher	= {John Benjamins},
+  title		= {Merge, Derivational C-command, and Subcategorization in a
+		  Label-Free Syntax},
+  year		= {2006}
+}
+
 @Article{	  aremu2024prosodically,
   author	= {Aremu, Daniel Toluwalope and Weisser, Philipp},
   journal	= {Glossa: a journal of general linguistics},
