--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Book{		  gwilliams2024hierarchical,
+  author	= {Gwilliams, Laura and Marantz, Alec and Poeppel, David and
+		  King, Jean-Remi},
+  pages		= {2024.04.19.590280},
+  publisher	= {bioRxiv},
+  title		= {Hierarchical Dynamic Coding Coordinates Speech
+		  Comprehension in the Brain},
+  volume	= {New Results},
+  year		= {2024}
+}
+
 @Book{		  disciullo1987definition,
   address	= {Cambridge, Mass},
   author	= {Di Sciullo, Anne-Marie and Williams, Edwin},
