--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  alexandropoulou2024gradable,
+  author	= {Alexandropoulou, Stavroula and Gotzner, Nicole},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Gradable Adjective Interpretation under Negation: The Role
+		  of Competition},
+  volume	= {9},
+  year		= {2024}
+}
+
 @Book{		  gwilliams2024hierarchical,
   author	= {Gwilliams, Laura and Marantz, Alec and Poeppel, David and
 		  King, Jean-Remi},
