--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,21 @@
 
+@Book{		  felser1999verbal,
+  address	= {Amsterdam},
+  author	= {Felser, Claudia},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {Verbal Complement Clauses: A Minimalist Study of Direct
+		  Perception Constructions},
+  volume	= {25},
+  year		= {1999}
+}
+
+@Article{	  ditullio1998complementos,
+  author	= {Di Tullio, Angela L.},
+  title		= {Complementos no flexivos de verbos de percepci{\'o}n
+		  f\'isica en espa{\~n}ol},
+  year		= {1998}
+}
+
 @Article{	  alexandropoulou2024gradable,
   author	= {Alexandropoulou, Stavroula and Gotzner, Nicole},
   journal	= {Glossa: a journal of general linguistics},
