--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -305,9 +305,9 @@
 }
 
 @Misc{		  rooij2023reclaiming,
-  author	= {{\noopsort{rooij}}van Rooij, Iris and Guest, Olivia and
-		  Adolfi, Federico G. and {\noopsort{haan}}de Haan, Ronald
-		  and Kolokolova, Antonina and Rich, Patricia},
+  author	= {van Rooij, Iris and Guest, Olivia and Adolfi, Federico G.
+		  and de Haan, Ronald and Kolokolova, Antonina and Rich,
+		  Patricia},
   publisher	= {OSF},
   title		= {Reclaiming {{AI}} as a Theoretical Tool for Cognitive
 		  Science},
@@ -469,7 +469,7 @@
 }
 
 @Article{	  vanurk2024constraining,
-  author	= {{\noopsort{urk}}{van Urk}, Coppe},
+  author	= {{van Urk}, Coppe},
   journal	= {Linguistic Inquiry},
   number	= {2},
   pages		= {327--373},
