--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,29 @@
 
+@Book{		  fodor2008lot,
+  address	= {Oxford : New York},
+  author	= {Fodor, Jerry A.},
+  publisher	= {Clarendon Press ; Oxford University Press},
+  title		= {{LOT} 2: The Language of Thought Revisited},
+  year		= {2008}
+}
+
+@Book{		  fodor2003hume,
+  address	= {Oxford : Oxford ; New York},
+  author	= {Fodor, Jerry A.},
+  publisher	= {Clarendon Press ; Oxford University Press},
+  title		= {Hume Variations},
+  year		= {2003}
+}
+
+@Book{		  fodor2001mind,
+  address	= {Cambridge, Mass.},
+  author	= {Fodor, Jerry A.},
+  publisher	= {MIT Press},
+  title		= {The Mind Doesn't Work That Way: The Scope and Limits of
+		  Computational Psychology},
+  year		= {2001}
+}
+
 @Book{		  felser1999verbal,
   address	= {Amsterdam},
   author	= {Felser, Claudia},
