--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,46 @@
 
+@Article{	  hinterwimmer2024accounts,
+  author	= {Hinterwimmer, Stefan},
+  journal	= {Language and Linguistics Compass},
+  number	= {3},
+  pages		= {e12517},
+  title		= {Accounts of Perspective Taking in Narrative},
+  volume	= {18},
+  year		= {2024}
+}
+
+@Article{	  abrusan2021spectruma,
+  author	= {Abrus{\'a}n, M{\'a}rta},
+  journal	= {Linguistics and Philosophy},
+  number	= {4},
+  pages		= {839--873},
+  title		= {The Spectrum of Perspective Shift: Protagonist Projection
+		  versus Free Indirect Discourse},
+  volume	= {44},
+  year		= {2021}
+}
+
+@Article{	  higginbotham1983logic,
+  author	= {Higginbotham, James},
+  journal	= {The Journal of Philosophy},
+  number	= {2},
+  pages		= {100},
+  title		= {The Logic of Perceptual Reports: An Extensional
+		  Alternative to Situation Semantics},
+  volume	= {80},
+  year		= {1983}
+}
+
+@Book{		  culicover1977formal,
+  address	= {New York},
+  editor	= {Culicover, Peter W. and Wasow, Thomas and Akmajian, Adrian
+		  and Mathematical, Social Science Board and University of
+		  California, Irvine},
+  publisher	= {Academic Press},
+  title		= {Formal Syntax},
+  year		= {1977}
+}
+
 @Book{		  fodor2008lot,
   address	= {Oxford : New York},
   author	= {Fodor, Jerry A.},
