--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,67 @@
 
+@PhDThesis{	  horn1976semantic,
+  author	= {Horn, Laurence R.},
+  school	= {Yale University},
+  title		= {On the Semantic Properties of Logical Operators in
+		  English},
+  year		= {1976}
+}
+
+@Unpublished{	  lacina2024exploring,
+  author	= {Lacina, Radim and Gotzner, Nicole},
+  title		= {Exploring Scalar Diversity through Priming: A Lexical
+		  Decision Study with Adjectives},
+  year		= {2024}
+}
+
+@InBook{	  szabo2001adjectives,
+  address	= {Amsterdam; Philadelphia},
+  author	= {Szab{\'o}, Zolt{\'a}n Gendler},
+  booktitle	= {Perspectives on Semantics, Pragmatics, and Discourse: A
+		  Festschrift for Ferenc Kiefer},
+  editor	= {Kiefer, Ferenc and Kenesei, Istv{\'a}n and Harnish, Robert
+		  M.},
+  publisher	= {John Benjamins Pub. Co},
+  title		= {Adjectives in context},
+  year		= {2001}
+}
+
+@Article{	  wunderlichdieter1997argument,
+  author	= {Wunderlich, Dieter},
+  journal	= {Journal of Semantics},
+  number	= {2},
+  pages		= {95--142},
+  title		= {Argument Extension by Lexical Adjunction},
+  volume	= {14},
+  year		= {1997}
+}
+
+@Book{		  kiefer2001perspectives,
+  address	= {Amsterdam; Philadelphia},
+  editor	= {Kiefer, Ferenc and Kenesei, Istv{\'a}n and Harnish, Robert
+		  M.},
+  publisher	= {John Benjamins Pub. Co},
+  title		= {Perspectives on Semantics, Pragmatics, and Discourse: A
+		  Festschrift for Ferenc Kiefer},
+  year		= {2001}
+}
+
+@Article{	  alsop2024pragmatics,
+  author	= {Alsop, Anna},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {The Pragmatics of Free Choice Any},
+  volume	= {9},
+  year		= {2024}
+}
+
+@Article{	  planas2022estudios,
+  author	= {Fern{\'a}ndez Planas, Ana Mar{\'i}a},
+  number	= {1},
+  title		= {Estudios de Fon{\'e}tica Experimental},
+  year		= {2022}
+}
+
 @Article{	  hinterwimmer2024accounts,
   author	= {Hinterwimmer, Stefan},
   journal	= {Language and Linguistics Compass},
