--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  murphy2024natural,
+  author	= {Murphy, Elliot and Holmes, Emma and Friston, Karl},
+  journal	= {Synthese},
+  number	= {5},
+  pages		= {154},
+  title		= {Natural Language Syntax Complies with the Free-Energy
+		  Principle},
+  volume	= {203},
+  year		= {2024}
+}
+
 @PhDThesis{	  horn1976semantic,
   author	= {Horn, Laurence R.},
   school	= {Yale University},
