--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,16 @@
 
+@InBook{	  embick2007distributed,
+  address	= {Oxford ; New York},
+  author	= {Embick, David and Noyer, Rolf},
+  booktitle	= {The Oxford Handbook of Linguistic Interfaces},
+  editor	= {Ramchand, Gillian and Reiss, Charles},
+  publisher	= {Oxford University Press},
+  series	= {Oxford handbooks in linguistics},
+  title		= {Distributed Morphology and the Syntax/Morphology
+		  Interface},
+  year		= {2007}
+}
+
 @Article{	  murphy2024natural,
   author	= {Murphy, Elliot and Holmes, Emma and Friston, Karl},
   journal	= {Synthese},
@@ -52867,7 +52879,7 @@
   year		= {1998}
 }
 
-@Book{		  2007the-oxford-handbook-,
+@Book{		  ramchand2007oxford,
   address	= {Oxford ; New York},
   editor	= {Ramchand, Gillian and Reiss, Charles},
   publisher	= {Oxford University Press},
