--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  gibert-sotelo2024argument,
+  author	= {Gibert-Sotelo, Elisabeth and Mart{\'i}n, Rafael},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Argument Structure and the Eventive-Stative Alternation in
+		  Extent Verbs},
+  volume	= {9},
+  year		= {2024}
+}
+
 @InBook{	  embick2007distributed,
   address	= {Oxford ; New York},
   author	= {Embick, David and Noyer, Rolf},
