--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,64 @@
 
+@Article{	  chen2024ignorance,
+  author	= {Chen, Yi-Hsun},
+  journal	= {Linguistics and Philosophy},
+  title		= {Ignorance and Concession with Superlative Modifiers: A
+		  Cross-Linguistic Perspective},
+  year		= {2024}
+}
+
+@Article{	  chomsky2021minimalism,
+  author	= {Chomsky, Noam},
+  journal	= {GENGO KENKYU (Journal of the Linguistic Society of
+		  Japan)},
+  pages		= {1--41},
+  title		= {Minimalism:Where Are We Now, and Where Can We Hope to Go},
+  volume	= {160},
+  year		= {2021}
+}
+
+@Article{	  brochhagen2023language,
+  author	= {Brochhagen, Thomas and Boleda, Gemma and Gualdoni,
+		  Eleonora and Xu, Yang},
+  journal	= {Science},
+  number	= {6656},
+  pages		= {431--436},
+  title		= {From Language Development to Language Evolution: A Unified
+		  View of Human Lexical Creativity},
+  volume	= {381},
+  year		= {2023}
+}
+
+@Article{	  brochhagen2022when,
+  author	= {Brochhagen, Thomas and Boleda, Gemma},
+  journal	= {Cognition},
+  pages		= {105179},
+  title		= {When Do Languages Use the Same Word for Different
+		  Meanings? The Goldilocks Principle in Colexification},
+  volume	= {226},
+  year		= {2022}
+}
+
+@InBook{	  wasow2015ambiguity,
+  author	= {Wasow, Thomas},
+  editor	= {Winkler, Susanne},
+  pages		= {29-48},
+  publisher	= {DE GRUYTER},
+  title		= {Ambiguity Avoidance Is Overrated Ambiguity},
+  year		= {2015}
+}
+
+@Article{	  bielecka2024representationalism,
+  author	= {Bielecka, Krystyna and Mi{\l}kowski, Marcin},
+  journal	= {Synthese},
+  number	= {5},
+  pages		= {161},
+  title		= {Representationalism and Rationality: Why Mental
+		  Representation Is Real},
+  volume	= {203},
+  year		= {2024}
+}
+
 @Article{	  gibert-sotelo2024argument,
   author	= {Gibert-Sotelo, Elisabeth and Mart{\'i}n, Rafael},
   journal	= {Glossa: a journal of general linguistics},
