--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Article{	  crowley2024modal,
+  author	= {Crowley, Paul},
+  journal	= {Linguistics and Philosophy},
+  title		= {Modal Tense: If and Wish},
+  year		= {2024}
+}
+
 @Article{	  chen2024ignorance,
   author	= {Chen, Yi-Hsun},
   journal	= {Linguistics and Philosophy},
