--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Article{	  hohaus2024language,
+  author	= {Hohaus, Vera},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Language Change and the Degree Semantics Parameter},
+  year		= {2024}
+}
+
 @Article{	  crowley2024modal,
   author	= {Crowley, Paul},
   journal	= {Linguistics and Philosophy},
