--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,118 @@
 
+@Article{	  taniguchi1997semantics,
+  author	= {Taniguchi, Kazumi},
+  journal	= {English Linguistics},
+  pages		= {270--299},
+  title		= {On the Semantics and Development of Copulative Perception
+		  Verbs in English: A Cognitive Perspective},
+  volume	= {14},
+  year		= {1997}
+}
+
+@Article{	  viberg2019phenomenonbased,
+  author	= {Viberg, {\AA}ke},
+  journal	= {Syntaxe et semantique},
+  number	= {1},
+  pages		= {17--48},
+  title		= {Phenomenon-Based Perception Verbs in Swedish from a
+		  Typological and Contrastive Perspective},
+  volume	= {20},
+  year		= {2019}
+}
+
+@Book{		  asudeh2012logic,
+  address	= {New York},
+  author	= {Asudeh, Ash},
+  publisher	= {Oxford University Press},
+  title		= {The Logic of Pronominal Resumption},
+  year		= {2012}
+}
+
+@PhDThesis{	  asudeh2004resumption,
+  author	= {Asudeh, Ash},
+  school	= {Stanford University},
+  title		= {Resumption as Resource Management},
+  year		= {2004}
+}
+
+@InBook{	  asudeh2002richard,
+  address	= {Chicago, IL},
+  author	= {Asudeh, Ash},
+  publisher	= {Chicago Linguistic Society},
+  title		= {Richard {III} {CLS} 38: The Main Session},
+  year		= {2002}
+}
+
+@Article{	  viberg1983verbs,
+  author	= {Viberg, {\AA}ke},
+  number	= {1},
+  pages		= {123--162},
+  title		= {The Verbs of Perception: A Typological Study},
+  volume	= {21},
+  year		= {1983}
+}
+
+@Book{		  whitt2010evidentiality,
+  address	= {Oxford ; New York},
+  author	= {Whitt, Richard J.},
+  publisher	= {Peter Lang},
+  title		= {Evidentiality and Perception Verbs in English and German},
+  volume	= {(v. 26)},
+  year		= {2010}
+}
+
+@InBook{	  staniewski2021case,
+  author	= {Staniewski, Przemys{\l}aw and Go{\l}{\k e}biowski, Adam},
+  editor	= {J{\k e}drzejowski, {\L}ukasz and Staniewski, Przemys{\l}aw},
+  pages		= {403-448},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {The Case of German and Polish: To What Extent Can
+		  Source-Based Olfactory Verbs Be Classified as Copulas? The
+		  Linguistics of Olfaction: Typological and Diachronic
+		  Approaches to Synchronic Diversity},
+  year		= {2021}
+}
+
+@PhDThesis{	  poortvliet2018perception,
+  author	= {Poortvliet, M.},
+  school	= {University of Oxford},
+  title		= {Perception and Predication: A Synchronic and Diachronic
+		  Analysis of Dutch Descriptive Perception Verbs as
+		  Evidential Copular Verbs},
+  year		= {2018}
+}
+
+@Article{	  kaiser2021consequences,
+  author	= {Kaiser, Elsi},
+  journal	= {Frontiers in Psychology},
+  title		= {Consequences of Sensory Modality for Perspective-Taking:
+		  Comparing Visual, Olfactory and Gustatory Perception},
+  volume	= {12},
+  year		= {2021}
+}
+
+@Article{	  kaiser2020when,
+  author	= {Kaiser, Elsi and Rudin, Deniz},
+  journal	= {Proceedings of the Linguistic Society of America},
+  number	= {1},
+  pages		= {698--707},
+  title		= {When Faultless Disagreement Is Not so Faultless: What
+		  Widely-Held Opinions Can Tell Us about Subjective
+		  Adjectives},
+  volume	= {5},
+  year		= {2020}
+}
+
+@Article{	  kaiser2021shifty,
+  author	= {Kaiser, Elsi},
+  journal	= {Semantics and Linguistic Theory},
+  pages		= {821},
+  title		= {Shifty Behavior: Investigating Predicates of Personal
+		  Taste and Perspectival Anaphors},
+  volume	= {30},
+  year		= {2021}
+}
+
 @Article{	  hohaus2024language,
   author	= {Hohaus, Vera},
   journal	= {Natural Language and Linguistic Theory},
