--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  vangelderen2015copula,
+  author	= {Van Gelderen, Elly},
+  journal	= {Lingue e Linguaggio},
+  number	= {2},
+  pages		= {287--301},
+  title		= {The Copula Cycle},
+  volume	= {14},
+  year		= {2015}
+}
+
 @Article{	  taniguchi1997semantics,
   author	= {Taniguchi, Kazumi},
   journal	= {English Linguistics},
@@ -35,11 +45,12 @@
   year		= {2004}
 }
 
-@InBook{	  asudeh2002richard,
+@InCollection{	  asudeh2002richard,
   address	= {Chicago, IL},
   author	= {Asudeh, Ash},
+  booktitle	= {{CLS} 38: The Main Session},
   publisher	= {Chicago Linguistic Society},
-  title		= {Richard {III} {CLS} 38: The Main Session},
+  title		= {Richard {III}},
   year		= {2002}
 }
 
